testcases/error/non_positive_value.veryl
module Module84 {
    let _a: p8  = -1;
    let _b: p16 = -1;
    let _c: p32 = -1;
    let _d: p64 = -1;
}
